[package]
name = "geyser-service-common"
version = "0.2.0"
description = "Common data structures for M81 FusionDrive Service"
authors = [
    "XOR·APPS <developers@xorapps.network>",
    "M81 Developers <support@m81.network>",
]
repository = "https://github.com/m81network/GeyserServiceCommon"
license = "MPL-2.0"
homepage = "https://m81.network/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.2"
